feat: remember the form data and pass it back to the form when the validation is not met

--- a/ServiceRadar.MVC/Views/Workshop/Create.cshtml
+++ b/ServiceRadar.MVC/Views/Workshop/Create.cshtml
@@ -1,36 +1,39 @@
-﻿<h1>Create Car Workshop</h1>
+﻿@using ServiceRadar.Application.Dtos;
+@model WorkshopDto;
+
+<h1>Create Car Workshop</h1>
 <hr />
 
 <div class="row">
     <div class="col-md-4">
         <form action="/Workshop/Create" method="post">
             <div class="form-group mb-3">
-                <label class="control-label" for="Name">Name</label>
-                <input class="form-control" type="text" id="Name" name="Name" />
+                <label class="control-label" asp-for="Name">Name</label>
+                <input class="form-control" type="text" asp-for="Name" />
             </div>
             <div class="form-group mb-3">
-                <label class="control-label" for="Description">Description</label>
-                <input class="form-control" type="text" id="Description" name="Description" />
+                <label class="control-label" asp-for="Description">Description</label>
+                <input class="form-control" type="text" asp-for="Description" />
             </div>
             <div class="form-group mb-3">
-                <label class="control-label" for="About">About</label>
-                <input class="form-control" type="text" id="About" name="About" />
+                <label class="control-label" asp-for="About">About</label>
+                <input class="form-control" type="text" asp-for="About" />
             </div>
             <div class="form-group mb-3">
-                <label class="control-label" for="PhoneNumber">Phone Number</label>
-                <input class="form-control" type="text" id="PhoneNumber" name="PhoneNumber" />
+                <label class="control-label" asp-for="PhoneNumber">Phone Number</label>
+                <input class="form-control" type="text" asp-for="PhoneNumber" />
             </div>
             <div class="form-group mb-3">
-                <label class="control-label" for="Street">Street</label>
-                <input class="form-control" type="text" id="Street" name="Street" />
+                <label class="control-label" asp-for="Street">Street</label>
+                <input class="form-control" type="text" asp-for="Street" />
             </div>
             <div class="form-group mb-3">
-                <label class="control-label" for="City">City</label>
-                <input class="form-control" type="text" id="City" name="City" />
+                <label class="control-label" asp-for="City">City</label>
+                <input class="form-control" type="text" asp-for="City" />
             </div>
             <div class="form-group mb-3">
-                <label class="control-label" for="PostalCode">Postal Code</label>
-                <input class="form-control" type="text" id="PostalCode" name="PostalCode" />
+                <label class="control-label" asp-for="PostalCode">Postal Code</label>
+                <input class="form-control" type="text" asp-for="PostalCode" />
             </div>
 
             <div class="form-group mb-3">
