feat: add form validation on frontend side

--- a/ServiceRadar.MVC/Views/Workshop/Create.cshtml
+++ b/ServiceRadar.MVC/Views/Workshop/Create.cshtml
@@ -47,3 +47,9 @@
         </form>
     </div>
 </div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
