feat: add Bootstrap elements to the view

--- a/ServiceRadar.MVC/Views/Shared/_Layout.cshtml
+++ b/ServiceRadar.MVC/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link @(controller == "Home" && action == "Privacy" ? "active" : "")" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link @(controller == "Workshop" && action == "Index" ? "active" : "")" asp-area="" asp-controller="Workshop" asp-action="Index">Index</a>
+                        </li>
                     </ul>
                 </div>
             </div>
