refactor: move GetByName method to WorkshopService

--- a/ServiceRadar.MVC/Views/Workshop/Create.cshtml
+++ b/ServiceRadar.MVC/Views/Workshop/Create.cshtml
@@ -1,7 +1,11 @@
 ﻿@using ServiceRadar.Application.Dtos;
 @model WorkshopDto;
 
-<h1>Create Car Workshop</h1>
+@{
+    ViewData["Title"] = "Create Car Workshop";
+}
+
+<h1>@ViewData["Title"]</h1>
 <hr />
 
 <div class="row">
