feat: add CQRS pattern, refactor application

--- a/ServiceRadar.MVC/Views/Workshop/Create.cshtml
+++ b/ServiceRadar.MVC/Views/Workshop/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@using ServiceRadar.Application.Dtos;
-@model WorkshopDto;
+﻿@using ServiceRadar.Application.Workshops.Commands.CreateWorkshop;
+@model CreateWorkshopCommand;
 
 @{
     ViewData["Title"] = "Create Car Workshop";
