--- a/ServiceRadar.MVC/Views/Workshop/Index.cshtml
+++ b/ServiceRadar.MVC/Views/Workshop/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<ServiceRadar.Application.Dtos.WorkshopDto>
+﻿@using ServiceRadar.Application.Workshops.Dtos;
+@model IEnumerable<WorkshopDto>
 
 @{
     ViewData["Title"] = "Workshops";
