--- a/ServiceRadar.MVC/Views/Workshop/Details.cshtml
+++ b/ServiceRadar.MVC/Views/Workshop/Details.cshtml
@@ -49,6 +49,6 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-primary" asp-controller="Workshop" asp-action="Edit" asp-route-encodedName="@Model.EncodedName">Edit</a>
+    <a class="btn btn-outline-secondary" asp-action="Index">Back to List</a>
 </div>
