--- a/ServiceRadar.MVC/Views/Shared/_Layout.cshtml
+++ b/ServiceRadar.MVC/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                             <a class="nav-link @(controller == "Workshop" && action == "Index" ? "active" : "")" asp-area="" asp-controller="Workshop" asp-action="Index">Index</a>
                         </li>
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
