--- a/ServiceRadar.MVC/Views/Shared/_Layout.cshtml
+++ b/ServiceRadar.MVC/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                             <a class="nav-link @(controller == "Home" && action == "Privacy" ? "active" : "")" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link @(controller == "Workshop" && action == "Index" ? "active" : "")" asp-area="" asp-controller="Workshop" asp-action="Index">Index</a>
+                            <a class="nav-link @(controller == "Workshop" && action == "Index" ? "active" : "")" asp-area="" asp-controller="Workshop" asp-action="Index">Workshops</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
