--- a/ServiceRadar.MVC/Views/Shared/_Layout.cshtml
+++ b/ServiceRadar.MVC/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Service Radar</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/toastr.js/toastr.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ServiceRadar.MVC.styles.css" asp-append-version="true" />
 </head>
@@ -56,12 +57,13 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/toastr.js/toastr.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     @if(notification != null)
     {
         <script>
-            alert("@notification.Message, type: @notification.Type")
+            toastr["@notification.Type"]("@notification.Message")
         </script>
     }
 
