--- a/ServiceRadar.MVC/Views/Workshop/Edit.cshtml
+++ b/ServiceRadar.MVC/Views/Workshop/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model ServiceRadar.Application.Workshops.Commands.EditWorkshop.EditWorkshopCommand
+﻿@using ServiceRadar.Application.WorkshopServices.Commands;
+@model ServiceRadar.Application.Workshops.Commands.EditWorkshop.EditWorkshopCommand
 
 @{
     ViewData["Title"] = "Edit";
@@ -49,28 +50,8 @@
     </div>
 </div>
 
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createWorkshopServiceModal">
-    Add Workshop Service
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="createWorkshopServiceModal" tabindex="-1" aria-labelledby="createWorkshopServiceModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="createWorkshopServiceModalLabel">Create new workshop service</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                ...
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-        </div>
-    </div>
+<div class="form-group m-3">
+    <partial name="_CreateWorkshopService" model="new CreateWorkshopServiceCommand(){WorskhopEncodedName=Model.EncodedName!}" />
 </div>
 
 @section Scripts {
