--- a/ServiceRadar.MVC/Views/Workshop/Edit.cshtml
+++ b/ServiceRadar.MVC/Views/Workshop/Edit.cshtml
@@ -54,6 +54,11 @@
     <partial name="_CreateWorkshopService" model="new CreateWorkshopServiceCommand(){WorkshopEncodedName=Model.EncodedName!}" />
 </div>
 
+<div class="row">
+    <h4 class="mt-3">Workshop services:</h4>
+    <div id="services" data-encoded-name="@Model.EncodedName"></div>
+</div>
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 
