--- a/ServiceRadar.MVC/wwwroot/scss/views/shared-layout.scss
+++ b/ServiceRadar.MVC/wwwroot/scss/views/shared-layout.scss
@@ -1,6 +1,35 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    font-size: 14px;
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    margin-bottom: 60px;
+}
+
+html, body {
+    background: #eaedf2;
+    font-family: 'Roboto', sans-serif;
+}
+
+@media (min-width: 768px) {
+    html {
+        font-size: 16px;
+    }
+}
+
+.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+}
+
 /* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
-
 a.navbar-brand {
     white-space: normal;
     text-align: center;
@@ -23,10 +52,6 @@ a {
     border-color: #1861ac;
 }
 
-.border-top {
-    border-top: 1px solid #e5e5e5;
-}
-
 .border-bottom {
     border-bottom: 1px solid #e5e5e5;
 }
@@ -46,4 +71,5 @@ button.accept-policy {
     width: 100%;
     white-space: nowrap;
     line-height: 60px;
+    z-index: 1;
 }
