feat: Add modal window to FAB button with project information

--- a/ServiceRadar.MVC/Views/InfoButton/_InfoButton.cshtml
+++ b/ServiceRadar.MVC/Views/InfoButton/_InfoButton.cshtml
@@ -30,25 +30,9 @@
 
 <!-- Modal -->
 <div class="modal fade" id="infoAboutProject" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="infoAboutProjectLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-dialog modal-fullscreen-lg-down modal-lg modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
-
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="infoAboutProjectLabel">Modal title</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <h2 class="fs-5">Popover in a modal</h2>
-                <p>This <button class="btn btn-secondary" data-bs-toggle="popover" title="Popover title" data-bs-content="Popover body content is set in this attribute.">button</button> triggers a popover on click.</p>
-                <hr>
-                <h2 class="fs-5">Tooltips in a modal</h2>
-                <p><a href="#" data-bs-toggle="tooltip" title="Tooltip">This link</a> and <a href="#" data-bs-toggle="tooltip" title="Tooltip">that link</a> have tooltips on hover.</p>
-            </div>
-
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
+            <partial name="_InfoButtonModalContent.cshtml" />
         </div>
     </div>
 </div>
