--- a/ServiceRadar.MVC/wwwroot/scss/style.scss
+++ b/ServiceRadar.MVC/wwwroot/scss/style.scss
@@ -1,2 +1,3 @@
 ﻿@import "views/shared-layout.scss";
-@import "partials/info-button.scss";
+@import "InfoButton/info-button.scss";
+@import "InfoButton/info-button-modal-content.scss";
