--- a/ServiceRadar.MVC/Views/Shared/_Layout.cshtml
+++ b/ServiceRadar.MVC/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Service Radar</title>
+    <link rel="icon" href="~/img/logo.svg" type="image/svg+xml">
     <link rel="stylesheet" href="~/css/bootstrap.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -22,7 +23,10 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Service Radar</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="~/img/logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                    Service Radar
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -36,7 +40,7 @@
                             <a class="nav-link @(controller == "Home" && action == "Privacy" ? "active" : "")" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link @(controller == "Workshop" && action == "Index" ? "active" : "")" asp-area="" asp-controller="Workshop" asp-action="Index">Workshops</a>
+                            <a class="nav-link @(controller == "Workshop" ? "active" : "")" asp-area="" asp-controller="Workshop" asp-action="Index">Workshops</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -50,7 +54,7 @@
         </main>
     </div>
 
-    <partial name="_InfoButton.cshtml" />
+    <partial name="~/Views/InfoButton/_InfoButton.cshtml" />
 
     <footer class="footer text-muted">
         <div class="container">
