--- a/ServiceRadar.MVC/Views/Shared/_Layout.cshtml
+++ b/ServiceRadar.MVC/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                <a class="navbar-brand" asp-area="" asp-controller="Workshop" asp-action="Index">
                     <img src="~/img/logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                     Service Radar
                 </a>
@@ -34,13 +34,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link @(controller == "Home" && action == "Index" ? "active" : "")" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link @(controller == "Workshop" ? "active" : "")" asp-area="" asp-controller="Workshop" asp-action="Index">Workshops</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link @(controller == "Home" && action == "Privacy" ? "active" : "")" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link @(controller == "Workshop" ? "active" : "")" asp-area="" asp-controller="Workshop" asp-action="Index">Workshops</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
